--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,12 @@ description = "ZFS Manager with simple API"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indexmap = { version = "1.6", features = ["serde"] }
+itertools = "0.10"
+rweb = "0.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
 
 [features]
 pedantic = []
