--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,15 @@ description = "ZFS Manager with simple API"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-indexmap = { version = "1.6", features = ["serde"] }
+indexmap = { version = "1.6", features = ["serde-1"] }
 itertools = "0.10"
+once_cell = "1.7"
+parking_lot = { version = "0.11", features = ["serde"] }
 rweb = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+tokio = { version = "1.3", features = ["full"] }
 
 [features]
 pedantic = []
