--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ pretty_env_logger = "0.4"
 rweb = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_with = { version = "1.6", features = ["chrono"] }
 thiserror = "1.0"
 tokio = { version = "1.3", features = ["full"] }
 
