--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "ZFS Manager with simple API"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 indexmap = { version = "1.6", features = ["serde-1"] }
 itertools = "0.10"
 once_cell = "1.7"
