--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ indexmap = { version = "1.6", features = ["serde-1"] }
 itertools = "0.10"
 once_cell = "1.7"
 pretty_env_logger = "0.4"
+regex = "1"
 rweb = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
