--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,14 @@ version = "0.1.0"
 authors = ["The RepliXio developers <info@replixio.com>"]
 edition = "2018"
 description = "ZFS Manager with simple API"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = [
+    "nvpair-sys",
+]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -20,6 +26,9 @@ serde_json = "1.0"
 serde_with = { version = "1.6", features = ["chrono"] }
 thiserror = "1.0"
 tokio = { version = "1.3", features = ["full"] }
+
+[build-dependencies]
+bindgen = "0.58"
 
 [features]
 pedantic = []
