--- a/razorzfscore-sys/Cargo.toml
+++ b/razorzfscore-sys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zfs_uutil-sys"
+name = "razorzfscore-sys"
 version = "0.1.0"
 edition = "2018"
 build = "build.rs"
@@ -7,6 +7,7 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+razorzfsnvpair-sys = {version = "0.1", path="../razorzfsnvpair-sys"}
 
 [build-dependencies]
 bindgen = "0.58"
