* fixed nvpair build.rs to generate nvlist functionality * added initial crate for FFI interface * added FFI interface to root Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "razorzfsnvpair-sys",
     "razorzfscore-sys",
     "razorzfsuutil-sys",
+    "razorzfsnvpair",
 ]
 
 [dependencies]
