--- a/razorzfsnvpair/Cargo.toml
+++ b/razorzfsnvpair/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2"
 razorzfsnvpair-sys = {version = "0.1", path="../razorzfsnvpair-sys"}
 thiserror = "1.0"
