* added f64 functionality to nvpair * added unittests for mvpair functionality

--- a/razorzfsnvpair/Cargo.toml
+++ b/razorzfsnvpair/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 libc = "0.2"
 razorzfsnvpair-sys = {version = "0.1", path="../razorzfsnvpair-sys"}
 thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
