--- a/razorzfsnvpair/Cargo.toml
+++ b/razorzfsnvpair/Cargo.toml
@@ -11,3 +11,4 @@ razorzfsnvpair-sys = {version = "0.1", path="../razorzfsnvpair-sys"}
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+uuid = { version = "0.8", features = ["serde", "v4"] }
