--- a/serde-nvpair/Cargo.toml
+++ b/serde-nvpair/Cargo.toml
@@ -10,3 +10,8 @@ razorzfsnvpair = {version = "0.1", path="../razorzfsnvpair"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+
+[dev-dependencies]
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.3.2"
+jemalloc-ctl = "0.3.3"
