--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = { version = "1.6", features = ["chrono"] }
+razorzfsnvpair = {version = "0.1", path="../razorzfsnvpair"}
+serde-nvpair = {version = "0.1", path="../serde-nvpair"}
+thiserror = "1"
