--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -12,4 +12,5 @@ serde_json = "1.0"
 serde_with = { version = "1.6", features = ["chrono"] }
 razorzfsnvpair = {version = "0.1", path="../razorzfsnvpair"}
 serde-nvpair = {version = "0.1", path="../serde-nvpair"}
+razorzfscore-sys = {version = "0.1", path="../razorzfscore-sys"}
 thiserror = "1"
