covered errors from libc

--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -14,3 +14,4 @@ razorzfsnvpair = {version = "0.1", path="../razorzfsnvpair"}
 serde-nvpair = {version = "0.1", path="../serde-nvpair"}
 razorzfscore-sys = {version = "0.1", path="../razorzfscore-sys"}
 thiserror = "1"
+libc = "0.2"
