--- a/nvpair-sys/Cargo.toml
+++ b/nvpair-sys/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "razorzfsuutil-sys"
+name = "razor-nvpair-sys"
 version = "0.1.0"
 edition = "2018"
 build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
 
 [build-dependencies]
 bindgen = "0.58"
