--- a/nvpair/Cargo.toml
+++ b/nvpair/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "razorzfsnvpair"
+name = "razor-nvpair"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 libc = "0.2"
-razorzfsnvpair-sys = {version = "0.1", path="../razorzfsnvpair-sys"}
+razor-nvpair-sys = {version = "0.1", path="../nvpair-sys"}
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
