--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 .test:cargo:
   stage: test
   script:
+    - apt install llvm-dev libclang-dev clang
     - cargo fmt -- --check
     - cargo clippy --all-targets
     - cargo test
