--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
     - apt update
     - apt install -y libzfslinux-dev
     #- apt install -y llvm-dev libclang-dev clang
-    - apt install -y wget
+    - apt install -y lsb-release wget software-properties-common
     - wget https://apt.llvm.org/llvm.sh
     - chmod +x llvm.sh
     - sudo ./llvm.sh 3.9
