--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@
     - apt update
     - apt install -y libzfslinux-dev
     #- apt install -y llvm-dev libclang-dev clang
+    - apt install -y apt-transport-https ca-certificates
     - apt install -y lsb-release wget software-properties-common
     - wget https://apt.llvm.org/llvm.sh
     - chmod +x llvm.sh
