--- a/serde-nvpair/Cargo.toml
+++ b/serde-nvpair/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-razor-nvpair = {version = "0.1", path="../nvpair"}
-serde = { version = "1.0", features = ["derive"] }
+razor-nvpair = {version = "0.1", path = "../nvpair"}
+serde = "1.0"
 serde_json = "1.0"
-uuid = { version = "0.8", features = ["serde", "v4"] }
 
 [dev-dependencies]
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
