--- a/serde-nvpair/Cargo.toml
+++ b/serde-nvpair/Cargo.toml
@@ -12,5 +12,5 @@ serde_json = "1.0"
 
 [dev-dependencies]
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
-jemallocator = "0.3.2"
-jemalloc-ctl = "0.3.3"
+jemallocator = { version = "0.3", features = ["debug"] }
+jemalloc-ctl = "0.3"
