--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+once_cell = "1.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 razor-nvpair = {version = "0.1", path = "../nvpair"}
