--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zfs"
+name = "razor-zfs"
 version = "0.1.0"
 edition = "2018"
 
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 razor-nvpair = {version = "0.1", path = "../nvpair"}
 razor-zfscore-sys = {version = "0.1", path = "../zfscore-sys"}
+razor-zfscore = {version = "0.1", path = "../zfscore"}
 serde-nvpair = {version = "0.1", path = "../serde-nvpair"}
 serde_with = { version = "1.6", features = ["chrono"] }
 thiserror = "1.0"
