--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -10,6 +10,8 @@ tonic = "0.5"
 paste = "1.0"
 prost = "0.8"
 prop-macro = {version = "0.1", path = "./src/prop-macro"}
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [build-dependencies]
 tonic-build = "0.5"
