--- a/nvpair/Cargo.toml
+++ b/nvpair/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "razor-nvpair"
 version = "0.1.0"
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
 
 [dependencies]
 libc = "0.2"
-razor-nvpair-sys = {version = "0.1", path = "../nvpair-sys"}
+razor-libnvpair = { version = "0.1", path = "../libnvpair" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-uuid = { version = "0.8", features = ["serde", "v4"] }
+# uuid = { version = "0.8", features = ["serde", "v4"] }
