--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -12,6 +12,8 @@ prost = "0.8"
 prop-macro = {version = "0.1", path = "./src/prop-macro"}
 tracing = "0.1"
 tracing-subscriber = "0.2"
+tracing-appender = "0.1"
+anyhow = "1.0"
 
 [build-dependencies]
 tonic-build = "0.5"
