MANGO-2261 Refactoring crates layout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
     "zfscore-sys",
     "zfscore",
     "zfs",
-    #"zfsrpc"
+    "zfsrpc",
+    "rpc-client",
+    "rpc-server",
 ]
 resolver = "2"
