--- a/rpc-server/Cargo.toml
+++ b/rpc-server/Cargo.toml
@@ -5,8 +5,6 @@ edition = "2018"
 
 [dependencies]
 razor-zfsrpc = { version = "0.1", path = "../zfsrpc" }
+razor-tracing = {version = "0.1", path = "../tracing"}
 tokio = { version = "1.9", features = ["full"] }
 tonic = "0.5"
-tracing = "0.1"
-tracing-subscriber = "0.2"
-anyhow = "1.0"
