--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
 razor-zfs= { version = "0.1.0", path = "../zfs" }
+prop-macro = {version = "0.1", path = "../prop-macro"}
+razor-tracing = {version = "0.1", path = "../tracing"}
 tonic = "0.5"
 paste = "1.0"
 prost = "0.8"
-prop-macro = {version = "0.1", path = "../prop-macro"}
 tracing = "0.1"
 
 [build-dependencies]
