--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4"
 libc = "0.2"
 once_cell = "1.8"
 razor-libnvpair = { version = "0.1", path = "../libnvpair" }
