MANGO-2261 zpool client

--- a/rpc-server/Cargo.toml
+++ b/rpc-server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-razor-zfsrpc = { version = "0.1", path = "../zfsrpc" }
+razor-zfsrpc = { version = "0.1", path = "../zfsrpc", features = ["dirty"] }
 razor-tracing = {version = "0.1", path = "../tracing"}
 tokio = { version = "1.9", features = ["full"] }
 tonic = "0.5"
