--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[package]
+name = "razor"
+version = "0.1.0"
+
 [workspace]
 members = [
     "libnvpair-sys",
@@ -17,4 +21,26 @@ members = [
     "tracing",
     "ztool"
 ]
+
 resolver = "2"
+
+[package.metadata.deb]
+maintainer = "RepliXio developers <engineering@replixio.com>"
+copyright = "2021, RepliXio Ltd"
+#license-file = ["LICENSE.RepliXio"]
+depends = "$auto, systemd"
+conf-files = []
+extended-description = "RepliXio Razor agent"
+section = "admin"
+priority = "optional"
+assets = [
+    ["target/release/razor-rpc-server", "/usr/bin/", "755"],
+    ["assets/razor.service", "/etc/systemd/system/", "644"],
+]
+
+[package.metadata.deb.variants.debug]
+name="razor"
+assets = [
+    ["target/debug/razor-rpc-server", "/usr/bin/", "755"],
+    ["assets/razor.service", "/etc/systemd/system/", "644"],
+]
