--- a/rpc-server/Cargo.toml
+++ b/rpc-server/Cargo.toml
@@ -9,4 +9,5 @@ razor-zfsrpc = { version = "0.1", path = "../zfsrpc", features = ["dirty"] }
 razor-tracing = {version = "0.1", path = "../tracing"}
 tokio = { version = "1.9", features = ["full"] }
 tonic = "0.5"
+tracing = "0.1"
 
