--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -9,12 +9,14 @@ razor-zfs= { version = "0.1.0", path = "../zfs" }
 prop-macro = {version = "0.1", path = "../prop-macro"}
 razor-tracing = {version = "0.1", path = "../tracing"}
 razor-property = {version = "0.1", path = "../property"}
+razor-zfscore = {version = "0.1", path = "../zfscore"}
 thiserror = "1.0"
 tonic = "0.5"
 paste = "1.0"
 prost = "0.8"
 tracing = "0.1"
 anyhow = "1.0"
+inspector = "0.1"
 
 [build-dependencies]
 tonic-build = "0.5"
