--- a/rpc-server/Cargo.toml
+++ b/rpc-server/Cargo.toml
@@ -2,6 +2,8 @@
 name = "razor-rpc-server"
 version = "0.1.1"
 edition = "2018"
+build = "build.rs"
+
 
 [dependencies]
 anyhow = "1.0"
@@ -10,3 +12,8 @@ razor-tracing = {version = "0.1", path = "../tracing"}
 tokio = { version = "1.9", features = ["full"] }
 tonic = "0.5"
 tracing = "0.1"
+shadow-rs = "0.8"
+
+[build-dependencies]
+shadow-rs = "0.8"
+
