MANGO-2435 Return created dataset
Signed-off-by: David Avdat <david.avdat@replix.io>

--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -10,6 +10,7 @@ prop-macro = {version = "0.1", path = "../prop-macro"}
 razor-tracing = {version = "0.1", path = "../tracing"}
 razor-property = {version = "0.1", path = "../property"}
 razor-zfscore = {version = "0.1", path = "../zfscore"}
+itertools = "0.10"
 thiserror = "1.0"
 tonic = "0.5"
 paste = "1.0"
