--- a/tracing/Cargo.toml
+++ b/tracing/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2018"
 
 [dependencies]
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
 anyhow = "1.0"
