--- a/zfsrpc-cli/Cargo.toml
+++ b/zfsrpc-cli/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 tokio = { version = "1.9", features = ["full"] }
 razor-zfsrpc-client = { version = "0.1", path = "../zfsrpc-client" }
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
 structopt = "0.3"
 anyhow = "1.0"
