--- a/zfsrpc-cli/Cargo.toml
+++ b/zfsrpc-cli/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "razor-zfsrpc-cli"
 version = "0.1.3"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-tokio = { version = "1.9", features = ["full"] }
+anyhow = "1.0"
+clap = { version = "3.1", features = ["derive"] }
 razor-zfsrpc-client = { version = "0.1", path = "../zfsrpc-client" }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
-structopt = "0.3"
-anyhow = "1.0"
+tokio = { version = "1.9", features = ["full"] }
