--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -6,16 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nanoid = "0.4.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-rand = "0.8"
-razor-nvpair = {version = "0.1", path = "../nvpair"}
-razor-zfscore-sys = {version = "0.1", path = "../zfscore-sys"}
-razor-zfscore = {version = "0.1", path = "../zfscore"}
-razor-property = {version = "0.1", path = "../property"}
-serde_with = { version = "1.6", features = ["chrono"] }
-thiserror = "1.0"
 libc = "0.2"
 log = "0.4"
 once_cell = "1.8"
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = { version = "1.6", features = ["chrono"] }
+thiserror = "1.0"
+
+razor-nvpair = { version = "0.1", path = "../nvpair" }
+razor-zfscore-sys = { version = "0.1", path = "../zfscore-sys" }
+razor-zfscore = { version = "0.1", path = "../zfscore" }
+razor-property = { version = "0.1", path = "../property" }
+
+[dev-dependencies]
+nanoid = "0.4"
