--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -7,20 +7,19 @@ edition = "2021"
 anyhow = "1.0"
 async-stream = "0.3"
 itertools = "0.10"
+thiserror = "1.0"
 tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
 tokio-pipe = "0.2"
 tokio-stream = "0.1"
-tokio-util = { version = "0.7", features = ["io"] }
-thiserror = "1.0"
-tonic = "0.6"
-# paste = "1.0"
-prost = "0.9"
+# tokio-util = { version = "0.7", features = ["io"] }
 tracing = "0.1"
+tonic = "0.6"
+prost = "0.9"
 
-razor-zfs = { version = "0.1.0", path = "../zfs" }
 prop-macro = {version = "0.1", path = "../prop-macro"}
-razor-tracing = {version = "0.1", path = "../tracing"}
 razor-property = {version = "0.1", path = "../property"}
+razor-tracing = {version = "0.1", path = "../tracing"}
+razor-zfs = { version = "0.1.0", path = "../zfs" }
 razor-zfscore = {version = "0.1", path = "../zfscore"}
 
 [build-dependencies]
