--- a/zfsrpc-cli/Cargo.toml
+++ b/zfsrpc-cli/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+async-stream = "0.3"
+# bytes = "1.0"
 clap = { version = "3.1", features = ["derive"] }
 tokio = { version = "1.9", features = ["full"] }
 tracing = "0.1"
