--- a/zfsrpc-client/Cargo.toml
+++ b/zfsrpc-client/Cargo.toml
@@ -9,6 +9,8 @@ thiserror = "1.0"
 tracing = "0.1"
 tonic = "0.6"
 prost = "0.9"
+tokio-stream = "0.1"
+# tokio = "1.17"
 
 razor-property = { version = "0.1", path = "../property" }
 
