--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ stages:
   - test
   - build
 
-.stable:test:
+stable:test:
   variables:
     RUST_TOOLCHAIN: stable
   #tags:
@@ -56,15 +56,15 @@ nightly:test:
 image:build:
   stage: build
   image: docker:git
-  tags: 
+  tags:
     - "ondemand"
   services:
     - docker:dind
   rules:
-      - if: '$BUILD_DOCKER == "true"'
-        when: always
-      - if: '$CI_COMMIT_REF_NAME == "main"'
-        when: always
+    - if: '$BUILD_DOCKER == "true"'
+      when: always
+    - if: '$CI_COMMIT_REF_NAME == "main"'
+      when: always
   before_script:
     - git config --global credential.helper store
     - echo "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com" > ~/.git-credentials
@@ -75,4 +75,3 @@ image:build:
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   after_script:
     - rm ~/.git-credentials
-
