--- a/libnvpair/Cargo.toml
+++ b/libnvpair/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.3"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
 libc = "0.2"
 razor-libnvpair-sys = { version = "0.1", path = "../libnvpair-sys" }
