Factor out tracing-client into separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "property",
     "rpc-server",
     "zpool-client",
+    "ztool",
     "tracing",
-    "ztool"
+    "tracing-client",
 ]
-resolver = "2"
