--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 async-stream = "0.3"
 itertools = "0.10"
+libc = "0.2"
 thiserror = "1.0"
 tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
 tokio-pipe = "0.2"
