--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -9,7 +9,7 @@ async-stream = "0.3"
 itertools = "0.10"
 libc = "0.2"
 thiserror = "1.0"
-tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.9", features = ["macros", "process", "rt-multi-thread"] }
 tokio-pipe = "0.2"
 tokio-stream = "0.1"
 tracing = "0.1"
