--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "1.6", features = ["chrono"] }
 thiserror = "1.0"
+tokio = { version = "1.17", features = ["process"], optional = true }
 
 razor-nvpair = { version = "0.1", path = "../nvpair" }
 razor-zfscore-sys = { version = "0.1", path = "../zfscore-sys" }
@@ -22,3 +23,6 @@ razor-property = { version = "0.1", path = "../property" }
 
 [dev-dependencies]
 nanoid = "0.4"
+
+[features]
+cmd = ["tokio"]
