--- a/zfsrpc/Cargo.toml
+++ b/zfsrpc/Cargo.toml
@@ -19,7 +19,7 @@ prost = "0.9"
 prop-macro = { version = "0.1", path = "../prop-macro" }
 razor-property = { version = "0.1", path = "../property" }
 razor-tracing = { version = "0.1", path = "../tracing" }
-razor-zfs = { version = "0.1", path = "../zfs" }
+razor-zfs = { version = "0.1", path = "../zfs", features = ["cmd"] }
 razor-zfscore = { version = "0.1", path = "../zfscore"}
 
 [build-dependencies]
