--- a/zfscore/Cargo.toml
+++ b/zfscore/Cargo.toml
@@ -2,6 +2,12 @@
 name = "razor-zfscore"
 version = "0.2.0"
 edition = "2021"
+description = "Low-level libzfs_core interface"
+repository = "https://github.com/razor-zfs/razor-rs"
+readme = "../README.md"
+license = "MIT OR Apache-2.0"
+keywords = ["zfs", "zfs_core"]
+categories = ["api-bindings", "development-tools::ffi"]
 
 [dependencies]
 chrono = "0.4"
