--- a/property/Cargo.toml
+++ b/property/Cargo.toml
@@ -2,6 +2,12 @@
 name = "razor-property"
 version = "0.2.0"
 edition = "2021"
+description = "High-level ZFS properties"
+repository = "https://github.com/razor-zfs/razor-rs"
+readme = "../README.md"
+license = "MIT OR Apache-2.0"
+keywords = ["zfs"]
+categories = ["api-bindings"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
