--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -2,8 +2,12 @@
 name = "razor-zfs"
 version = "0.2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Idiomatic zfs API"
+repository = "https://github.com/razor-zfs/razor-rs"
+readme = "../README.md"
+license = "MIT OR Apache-2.0"
+keywords = ["zfs"]
+categories = ["api-bindings"]
 
 [dependencies]
 libc = "0.2"
