rename crates to follow convention
zfscore-sys -> libzfscore-sys
zfscore -> libzfscore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,16 @@ members = [
     "libnvpair-sys",
     "libnvpair",
     "nvpair",
-    "zfscore-sys",
-    "zfscore",
+    "libzfscore-sys",
+    "libzfscore",
     "zfs",
     "property",
-#    "zfsrpc",
-#    "zfsrpc-cli",
-#    "zfsrpc-client",
-#    "rpc-server",
-#    "zpool-client",
-#    "ztool",
-#    "tracing",
-#    "tracing-client",
+    #    "zfsrpc",
+    #    "zfsrpc-cli",
+    #    "zfsrpc-client",
+    #    "rpc-server",
+    #    "zpool-client",
+    #    "ztool",
+    #    "tracing",
+    #    "tracing-client",
 ]
