--- a/libzfscore/Cargo.toml
+++ b/libzfscore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "razor-zfscore"
+name = "razor-libzfscore"
 version = "0.4.0"
 edition = "2021"
 description = "Low-level libzfs_core interface"
@@ -18,4 +18,4 @@ thiserror = "1.0"
 
 razor-libnvpair = { version = "0.4", path = "../libnvpair" }
 razor-nvpair = { version = "0.4", path = "../nvpair" }
-razor-zfscore-sys = { version = "0.4", path = "../zfscore-sys" }
+razor-libzfscore-sys = { version = "0.4", path = "../libzfscore-sys" }
