--- a/property/Cargo.toml
+++ b/property/Cargo.toml
@@ -9,6 +9,8 @@ license = "MIT OR Apache-2.0"
 keywords = ["zfs"]
 categories = ["api-bindings"]
 
+publish = false
+
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
