--- a/libzfs/Cargo.toml
+++ b/libzfs/Cargo.toml
@@ -8,7 +8,7 @@ readme = "../README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["zfs"]
 categories = ["api-bindings", "development-tools::ffi"]
-
+build = "build.rs"
 publish = false
 
 [dependencies]
@@ -20,4 +20,9 @@ once_cell = "1.8"
 
 razor-libnvpair = { version = "0.4", path = "../libnvpair" }
 razor-nvpair = { version = "0.4", path = "../nvpair" }
+razor-libzfscore-sys = { version = "0.4", path = "../libzfscore-sys" }
+
+[build-dependencies]
+libc = "0.2"
+
 razor-libzfscore-sys = { version = "0.4", path = "../libzfscore-sys" }
