--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -16,6 +16,7 @@ libc = "0.2"
 log = "0.4"
 once_cell = "1.8"
 rand = "0.8"
+parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "1.6", features = ["chrono"] }
@@ -24,6 +25,7 @@ tokio = { version = "1.17", features = ["process"], optional = true }
 
 razor-nvpair = { version = "0.4", path = "../nvpair" }
 razor-libzfscore = { version = "0.4", path = "../libzfscore" }
+razor-libzfs = { version = "0.4", path = "../libzfs" }
 razor-property = { version = "0.4", path = "../property" }
 
 [dev-dependencies]
