razor-libzfs-sys: split it from razor-libzfscore-sys

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ members = [
     "libnvpair",
     "nvpair",
     "libzfscore-sys",
-    "libzfs",
     "libzfscore",
+    "libzfs-sys",
+    "libzfs",
     "zfs",
     "property",
     #    "zfsrpc",
