--- a/libzfs-sys/Cargo.toml
+++ b/libzfs-sys/Cargo.toml
@@ -1,25 +1,23 @@
 [package]
-name = "razor-libzfs"
+name = "razor-libzfs-sys"
 version = "0.5.0"
 edition = "2021"
-description = "Low-level libzfs interface"
+description = "libzfs FFI bindings"
 repository = "https://github.com/razor-zfs/razor-rs"
 readme = "../README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["zfs"]
-categories = ["api-bindings", "development-tools::ffi"]
+categories = ["api-bindings", "external-ffi-bindings"]
+links = "zfs"
 build = "build.rs"
-publish = false
 
 [dependencies]
 libc = "0.2"
-once_cell = "1.8"
 
 razor-libnvpair = { version = "0.5", path = "../libnvpair" }
 razor-libzfscore = { version = "0.5", path = "../libzfscore" }
-razor-libzfs-sys = { version = "0.5", path = "../libzfs-sys" }
+
 
 [build-dependencies]
-libc = "0.2"
-
-razor-libzfs-sys = { version = "0.5", path = "../libzfs-sys" }
+bindgen = "0.60"
+pkg-config = "0.3"
