--- a/libzfs-sys/Cargo.toml
+++ b/libzfs-sys/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["zfs"]
 categories = ["api-bindings", "external-ffi-bindings"]
 links = "zfs"
 build = "build.rs"
+rust-version = "1.62"
+
 
 [dependencies]
 libc = "0.2"
