--- a/property/Cargo.toml
+++ b/property/Cargo.toml
@@ -12,6 +12,6 @@ categories = ["api-bindings"]
 publish = false
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
+time = { version = "0.3", features = ["serde"] }
