--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -19,7 +19,7 @@ rand = "0.8"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_with = { version = "1.6", features = ["chrono"] }
+serde_with = "1.6"
 thiserror = "1.0"
 tokio = { version = "1.17", features = ["process"], optional = true }
 
