--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ members = [
     "libzpool-sys",
     "libzpool",
     "zfs",
-    "cli",
     "test",
+    "cli",
+    "ztb",
     #    "property",
     #    "zfsrpc",
     #    "zfsrpc-cli",
