zfs: refactor ZFS properties handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ members = [
     "libzfs-sys",
     "libzfs",
     "zfs",
-    "property",
     "cli",
+    #    "property",
     #    "zfsrpc",
     #    "zfsrpc-cli",
     #    "zfsrpc-client",
