--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -14,7 +14,7 @@ publish = false
 [dependencies]
 libc = "0.2"
 log = "0.4"
-once_cell = "1.8"
+once_cell = { version = "1.13", features = ["parking_lot"] }
 rand = "0.8"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
@@ -25,7 +25,6 @@ tokio = { version = "1.17", features = ["process"], optional = true }
 razor-nvpair = { version = "0.10", path = "../nvpair" }
 razor-libzfscore = { version = "0.10", path = "../libzfscore" }
 razor-libzfs = { version = "0.10", path = "../libzfs" }
-razor-property = { version = "0.10", path = "../property" }
 
 [dev-dependencies]
 nanoid = "0.4"
