--- a/libzfscore/Cargo.toml
+++ b/libzfscore/Cargo.toml
@@ -17,3 +17,6 @@ once_cell = "1.8"
 
 razor-libnvpair = { version = "0.10", path = "../libnvpair" }
 razor-libzfscore-sys = { version = "0.10", path = "../libzfscore-sys" }
+
+[features]
+wait = []
