zfs: use safe-libzfs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ members = [
     "nvpair",
     "libzfscore-sys",
     "libzfscore",
+    "lzc",
     "libzfs-sys",
     "libzfs",
-    "lzc",
+    "safe-libzfs",
     "zfs",
     "cli",
     #    "property",
