--- a/zfs/Cargo.toml
+++ b/zfs/Cargo.toml
@@ -13,18 +13,14 @@ publish = false
 
 [dependencies]
 libc = "0.2"
-log = "0.4"
 once_cell = { version = "1.13", features = ["parking_lot"] }
-rand = "0.8"
-parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.17", features = ["process"], optional = true }
 
 razor-nvpair = { version = "0.10", path = "../nvpair" }
-razor-libzfscore = { version = "0.10", path = "../libzfscore" }
-razor-libzfs = { version = "0.10", path = "../libzfs" }
+razor-safe-libzfs = { version = "0.10", path = "../safe-libzfs" }
 razor-lzc = { version = "0.10", path = "../lzc" }
 
 [dev-dependencies]
