--- a/safe-libzfs/Cargo.toml
+++ b/safe-libzfs/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["zfs", "libzfs"]
 categories = ["api-bindings"]
 rust-version = "1.62"
 
+publish = false
+
 
 [dependencies]
 libc = "0.2"
