--- a/safe-lzc/Cargo.toml
+++ b/safe-lzc/Cargo.toml
@@ -17,3 +17,7 @@ thiserror = "1.0"
 
 razor-nvpair = { version = "0.12", path = "../nvpair" }
 razor-libzfscore = { version = "0.12", path = "../libzfscore" }
+
+[dev-dependencies]
+nanoid = "0.4"
+nanoid-dictionary = "0.4"
