Add razor-test crate: test helper

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "safe-libzfs",
     "zfs",
     "cli",
+    "test",
     #    "property",
     #    "zfsrpc",
     #    "zfsrpc-cli",
